# advent_of_code_24

./: README.md
01/cpp/: CMakeLists.txt  CMakePresets.json
01/cpp/src/: main.cpp
02/cpp/: CMakeLists.txt
02/cpp/src/: main.cpp
03/cpp/: CMakeLists.txt
03/cpp/src/: main.cpp  main2.cpp
04/cpp/: CMakeLists.txt
04/cpp/src/: main.cpp  main2.cpp
05/cpp/: CMakeLists.txt
05/cpp/input/: example2.txt
05/cpp/src/: main.cpp
06/cpp/: .gitignore  CMakeLists.txt  CMakePresets.json
06/cpp/src/: GameMap.h  Player.h  main.cpp  main2.cpp
cpp_template/: CMakeLists.txt  CMakePresets.json
cpp_template/src/: main.cpp
